@@ -420,7 +420,7 @@ void SplineCtrlsDlg::updateSplines()
 	m_pSF->m_Extrados.splineCurve();
 	m_pSF->m_Intrados.SplineKnots();
 	m_pSF->m_Intrados.splineCurve();
-	m_pSF->UpdateSplineFoil();
+	m_pSF->updateSplineFoil();
 	QAFoil *pAFoil = (QAFoil*)s_pAFoil;
 	pAFoil->m_p2DWidget->update();
 }
